// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`add transforms correctly using "fixture-2" data 1`] = `
"const webpack = require(\\"webpack\\");

module.exports = {
	entry: {
        objects: \\"are\\",

        super: [
            \\"yeah\\",
            {
                test: new RegExp(/\\\\.(js|vue)$/),
                loader: \\"'eslint-loader'\\",
                enforce: \\"'pre'\\",
                include: [\\"customObj\\", \\"'Stringy'\\"],
                options: {
                    formatter: \\"'oki'\\",
                    updateMe: \\"sure\\"
                }
            }
        ],

        nice: \\"':)'\\",
        foo: \\"Promise.resolve()\\",
        man: \\"() => duper\\",
        mode: \\"yaaa\\",
        objects: are not,

        super: [op, {
            test: /\\\\.(wasm|c)$/,
            loader: 'pia-loader',
            enforce: 'pre',
            include: [asd, 'Stringy'],

            options: {
                formatter: 'nao'
            }
        }],

        nice: '=)',
        foo: Promise.resolve(),
        man: () => nice!!,
        mode: super-man
    }
}
"
`;

exports[`init transforms correctly using "fixture-1" data 1`] = `
"module.exports = {
  entry: {
    objects: are,

    super: [yeah, {
      test: /\\\\.(js|vue)$/,
      loader: 'eslint-loader',
      enforce: 'pre',
      include: [customObj, 'Stringy'],

      options: {
        formatter: 'someOption'
      }
    }],

    nice: ':)',
    foo: Promise.resolve(),
    man: () => duper
  }
};"
`;

exports[`remove transforms correctly using "fixture-3" data 1`] = `
"module.exports = {
	entry: {
        b: \\"taddda\\"
    },
	mode: \\"prod\\",
	devServer: {
		port: 9000,
	},
	devtool: \\"eval\\",
	plugins: [
		\\"plugin1\\",
		\\"plugin2\\",
		\\"plugin3\\",
	],
	module: {
		noParse: function(content) {
			return /jquery|lodash/.test(content);
		},
		rules: [
			{
				loader: \\"eslint-loader\\",
				options: {
					formatter: \\"someOption\\"
				}
			},
			{
				loader: \\"vue-loader\\",
				options: \\"vueObject\\"
			},
			{
				loader: \\"babel-loader\\",
				include: \\"asdf\\"
			}
		]
	}
};
"
`;

exports[`remove transforms correctly using "fixture-3" data 2`] = `
"module.exports = {
	entry: {
		a: \\"a.js\\",
		b: \\"taddda\\",
	},
	mode: \\"prod\\",
	devServer: {
		port: 9000,
	},
	devtool: \\"eval\\",
	plugins: [\\"plugin1\\", \\"plugin3\\"],
	module: {
		noParse: function(content) {
			return /jquery|lodash/.test(content);
		},
		rules: [
			{
				loader: \\"eslint-loader\\",
				options: {
					formatter: \\"someOption\\"
				}
			},
			{
				loader: \\"vue-loader\\",
				options: \\"vueObject\\"
			},
			{
				loader: \\"babel-loader\\",
				include: \\"asdf\\"
			}
		]
	}
};
"
`;

exports[`remove transforms correctly using "fixture-3" data 3`] = `
"module.exports = {
	entry: {
		a: \\"a.js\\",
		b: \\"taddda\\",
	},
	mode: \\"prod\\",
	devServer: {
		port: 9000,
	},
	devtool: \\"eval\\",
	plugins: [
		\\"plugin1\\",
		\\"plugin2\\",
		\\"plugin3\\",
	],
	module: {
        rules: [
			{
				loader: \\"eslint-loader\\",
				options: {
					formatter: \\"someOption\\"
				}
			},
			{
				loader: \\"vue-loader\\",
				options: \\"vueObject\\"
			},
			{
				loader: \\"babel-loader\\",
				include: \\"asdf\\"
			}
		]
    }
};
"
`;

exports[`remove transforms correctly using "fixture-3" data 4`] = `
"module.exports = {
	entry: {
		a: \\"a.js\\",
		b: \\"taddda\\",
	},
	mode: \\"prod\\",
	devServer: {
		port: 9000,
	},
	devtool: \\"eval\\",
	plugins: [
		\\"plugin1\\",
		\\"plugin2\\",
		\\"plugin3\\",
	],
	module: {
		noParse: function(content) {
			return /jquery|lodash/.test(content);
		},
		rules: [{
            loader: \\"vue-loader\\",
            options: \\"vueObject\\"
        }, {
            loader: \\"babel-loader\\",
            include: \\"asdf\\"
        }]
	}
};
"
`;
